# novaearth-ht

./: .gitignore  README.md  index.html  package-lock.json  package.json
amplify/auth/: resource.ts
amplify/data/: resource.ts
backend/lambda-agent/: Cargo.toml  README.md
backend/lambda-agent/src/: error_bedrock.rs  http_handler.rs  main.rs
src/: main.js  style.css
src/config/: api-config.js
src/regions/: aws-regions-data.js  aws-regions.json
src/services/: api-client.js
src/utils/: request-utils.js  simple-api.js
