[package]
name = "lambda-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.15.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.93.0"
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

tokio = { version = "1", features = ["full"] }
